...
                          theme.colorScheme.primary,
                          theme.colorScheme.primary
                        ],
                      ).createShader(Offset.zero & bounds.size);
                    },
                    child: Text(
                      '贪吃蛇游戏',
                      style: TextStyle(
                        fontSize: 60,
                        fontWeight: FontWeight.bold,
                        foreground: Paint()
                          ..style = PaintingStyle.stroke
                          ..strokeWidth = 6
...
                  Navigator.push(
                    context,
                    MaterialPageRoute(builder: (context) => MenuPage()),
                  );
                },
                child: Text(
                  "开始游戏",
                ),
              ),
            ],
          ),
        ),
      ),
...
