...
                    MaterialPageRoute(
                      builder: (context) => GamePage(mode: "normal"),
                    ),
                  );
                },
                label: Text(
                  "普通模式",
                ),
              ),
              SizedBox(height: 20), // 按钮之间的间隔
              FilledButton.icon(
                icon: Icon(Icons.sentiment_neutral),
                onPressed: () {
...
